# ethiopia_geo_hub

./: .gitignore  ACLED_AGOL_Data_Pipeline.ipynb  AGOL_BEST_PRACTICES.md  AGOL_PUBLISHING_KNOWLEDGE.md  pyproject.toml
data/admin_boundaries/: boundaries_1.geojson  boundaries_2.geojson  boundaries_3.geojson  config.json  piu_adm3_aliases.csv
data/layers/: agol_layers.json
data/processed/: piu_project_locations_adm3_match_report.csv
data/projects/: kobo_project_data.json
data/test_piu_results/: PIU Survey Results - as of 2026.25.05(Mapping WB-Supported Portfol...csv
data/worldpop/: worldpop_ethiopia_2026_metadata.json
docs/: agol_publishing_error.md  agol_publishing_workflow.md
outputs/market_accessibility_smoke/: ethiopia_market_accessibility_least_cost_smoke_500m.tif  ethiopia_market_accessibility_smoke_500m_metadata.json  ethiopia_market_accessibility_walk_smoke_500m.tif  ethiopia_market_allocation_groups_least_cost_smoke_500m.tif  ethiopia_market_allocation_groups_walk_smoke_500m.tif  (+4 more)
presentations/: geo_hub_background_preview.html  market_accessibility_power_slides.html
scripts/: build_drought_summary_layer.py  build_geo_hub_background.py  build_market_accessibility.py  build_market_accessibility_wgs84_rasters.py  build_market_isochrone_bands.py  build_piu_adm3_locations.py  publish_flood_rasters_to_agol.py  publish_geojson_to_agol.py  publish_mapspam_rasters_to_agol.py  publish_market_accessibility_rasters_to_agol.py  publish_market_accessibility_to_agol.py  publish_nighttime_lights_to_agol.py  publish_worldpop_rasters_to_agol.py
(+17 files in other folders)
