[project]
name = "ethiopia-geo-hub"
version = "0.1.0"
description = "Data preparation and ArcGIS Online publishing utilities for the Ethiopia Geo Hub."
requires-python = ">=3.11"
dependencies = [
    "arcgis>=2.4.3",
    "azure-storage-blob>=12.1,<12.18",
    "blackmarblepy>=2026.6.1",
    "geopandas>=1.1.3",
    "numpy>=1.26",
    "openpyxl>=3.1.5",
    "pyshp>=2.3.1",
    "rasterio>=1.3.9",
    "requests>=2.31.0",
    "scikit-image>=0.25",
]
